now requests port from velocity

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>JadLog</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.jadonvb</groupId>
+            <artifactId>JadMBClient</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
 </project>
